--- a/openvas/Dockerfile
+++ b/openvas/Dockerfile
@@ -18,6 +18,9 @@ RUN \
     mv /etc/redis/redis-openvas.conf /etc/redis/redis.conf && \
     mkdir /var/run/redis-openvas && \
     chown -R redis:redis /var/run/redis-openvas && \
+    sed -i 's/GSA_ADDRESS=127.0.0.1/GSA_ADDRESS=0.0.0.0/' /etc/default/greenbone-security-assistant && \
+    sed -i 's/MANAGER_ADDRESS=127.0.0.1/MANAGER_ADDRESS=0.0.0.0/' /etc/default/openvas-manager && \
+    sed 's/=$MANAGER_PORT"/=$MANAGER_PORT"\n\[ "$ALLOW_HEADER_HOST" \] \&\& DAEMONOPTS="$DAEMONOPTS --allow-header-host=$ALLOW_HEADER_HOST"/' /etc/default/greenbone-security-assistant && \
     sed -i 's/port 0/port 6379/' /etc/redis/redis.conf
 
 RUN \
